--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,94 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*{
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0;
+}
+.main_div{
+  width: 100%;
+  height: 100vh;
+  background: skyblue;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
+}
+
+.center_div{
+  width: 25%;
+  height: 80vh;
+  background-color: azure;
+  box-shadow: 5px 5px 25px -5px rgba(0,0,0,0.5);
+}
+h1{
+  color: white;
+  background: transparent;
+  background-color: cadetblue;
+  padding: 6px 0 2px 0;
+  margin-bottom: 10px;
+  box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.3);
+}
+input{
+  text-align: center;
+  height: 30px;
+  top:10px;
+  border: none;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 500;
+  width: 60%;
+  border-bottom: 2px solid gray;
+  outline: none;
+}
+
+button{
+  min-height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: gray;
+  color: white;
+  font-size: 40px;
+  border: none;
+  outline: none;
+  margin-left: 10px;
+  padding-bottom: 5px;
+  box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.3);
+}
+button:hover{
+  background-color: green;
+}
+  ol{
+    margin-top: 30px; 
+}
+ol li{
+  padding-left: 0;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 500;
+  min-height: 40px;
+  display: flex;
+  align-items: center;
+  color: blueviolet;
+  text-transform: capitalize;
+}
+
+.todo_style{
+  display: flex;
+  flex-direction: row;
+  justify-content:flex-start;
+  align-items: center;
+  padding-left: 10px;
+}
+.bi {
+  color: darkslategray;
+  padding: 5px;
+  cursor: pointer;
+}
+.bi:hover{
+  color: red;
+}
